Removed Denwer Parts in index.html

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>Реализация технического задания</title>
     <link rel="stylesheet" type="text/css" href="css/page.css" />
     <link rel="stylesheet" type="text/css" href="css/commentsarea.css" />
-    <script src="/denwer/js/main.js"></script>
+    <script src="/js/main.js"></script>
   </head>
   <body>
     <div id="commentContainer">
       <p id="comHeaderRounded">Сообщения</p>
       <div id="comCentralContent">
-        <iframe id="comMessagesFrame" style="width:100%;height:100%" frameborder="0" scrolling="auto" hspace="0" vspace="0" allowtransparency="true"  src="/denwer/php/Comments.php">
+        <iframe id="comMessagesFrame" style="width:100%;height:100%" frameborder="0" scrolling="auto" hspace="0" vspace="0" allowtransparency="true"  src="/php/Comments.php">
         </iframe>
       </div>
       <div id="comFooterRounded">
